--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -11,7 +11,8 @@ login.style=login-advanced
 login.title=Microdetection
 
 # Logo
-login.logo.src =https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg
+#login.logo.src =https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg
+login.logo.src =images/payara-fish-logo.svg
 login.logo.class =w-8 h-8 mr-2
 # -----------------------------
 
